RESOLVED FIXED296352
Fix debug assert in ScrollingEffectsController::processWheelEventForScrollSnap
https://bugs.webkit.org/show_bug.cgi?id=296352
Summary Fix debug assert in ScrollingEffectsController::processWheelEventForScrollSnap
Nikos Mouchtaris
Reported 2025-07-22 17:18:27 PDT
Fix debug assert in ScrollingEffectsController::processWheelEventForScrollSnap
Attachments
Radar WebKit Bug Importer
Comment 1 2025-07-22 17:36:23 PDT
Nikos Mouchtaris
Comment 2 2025-07-22 17:38:32 PDT
EWS
Comment 3 2025-07-24 16:33:53 PDT
Committed 297840@main (7802b9e685f8): <https://commits.webkit.org/297840@main> Reviewed commits have been landed. Closing PR #48397 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.