Fix debug assert in ScrollingEffectsController::processWheelEventForScrollSnap https://bugs.webkit.org/show_bug.cgi?id=296352 rdar://156449395

Reviewed by Simon Fraser.

Have ScrollingEffectsController::processWheelEventForScrollSnap handle wheel events
that have momentumPhase=WillBegin.

* Source/WebCore/platform/mac/ScrollingEffectsController.mm:
(WebCore::toWheelEventStatus):
(WebCore::operator<<):
(WebCore::ScrollingEffectsController::processWheelEventForScrollSnap):

Canonical link: https://commits.webkit.org/297840@main